Move css into a separate file, rename canvas into canvasElement and some dependency updates

--- a/public/index.html
+++ b/public/index.html
@@ -2,28 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Game</title>
-    <style>
-      html,
-      body,
-      canvas {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        touch-action: none;
-      }
-
-      * {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-      }
-    </style>
+    <title>BabylonJS Boilerplate</title>
   </head>
   <body>
-    <div id="ui"></div>
-    <canvas id="game" tabindex="1"></canvas>
+    <canvas id="canvas" tabindex="1"></canvas>
   </body>
 </html>
